--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "scripts": {
     "1": "ts-node ./1/src/index.ts",
+    "2": "ts-node ./2/src/index.ts",
     "build": "tsc",
     "test": "jest"
   },
